tests/compile-fail/type_mismatch_arg.ori
// Test that argument type mismatches are detected
// Spec: 06-types.md ยง Type Compatibility
// Design: 03-type-system/01-overview.md ยง Type Checking
//
// Function arguments must have types compatible with the parameter types.

@add (a: int, b: int) -> int = a + b

#[compile_fail("type mismatch")]
@test_type_mismatch_arg () -> void = {
    let result = add(a: "hello", b: 5);
    ()
}
